# python-coin-flip

./: .codecov.yml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish-coin.yml  publish-roll.yml  publish.yml  test-coin.yml  test-roll.yml
mitchallen/coin/: __init__.py
tests/: test_coin.py
