[project]
name = "mitchallen-coin"
version = "0.1.0"
description = "A simple coin flip random number generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [
    { name = "Mitch Allen" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mitchallen"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
